--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,36 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+    body {
+        @apply text-sm;
+    }
+    td {
+        @apply capitalize text-white/70
+    }
+    thead td {
+        @apply text-white
+    }
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer components {
+    .btn {
+        @apply flex gap-2 items-center text-sm text-white py-2 px-4 rounded disabled:cursor-not-allowed disabled:bg-gray-400 disabled:hover:bg-gray-400
+    }
+    .input {
+        @apply border border-slate-800 bg-slate-700 bg-transparent p-2 placeholder:text-white rounded-md outline-none focus:border-slate-300 placeholder:text-sm;
+    }
+    .container {
+        @apply max-w-[1000px]
+    }
+}
+
+@layer utilities {
+    .btn-red {
+        @apply bg-rose-900 hover:bg-rose-800 
+    }
+    .btn-green {
+        @apply bg-green-600 hover:bg-green-800
+    }
 }
